--- a/app/src/main/res/layout-w936dp/content_scrolling.xml
+++ b/app/src/main/res/layout-w936dp/content_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".LicensesScrollingActivity"
+    tools:context=".ui.LicensesScrollingActivity"
     tools:showIn="@layout/activity_licenses_scrolling">
 
     <androidx.core.widget.NestedScrollView
