--- a/app/src/main/res/layout/activity_licenses_scrolling.xml
+++ b/app/src/main/res/layout/activity_licenses_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".LicensesScrollingActivity">
+    tools:context=".ui.LicensesScrollingActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
