--- a/app/src/main/res/menu/menu_licenses_scrolling.xml
+++ b/app/src/main/res/menu/menu_licenses_scrolling.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.github.luismendes070.tictactoegame.LicensesScrollingActivity">
+    tools:context="com.github.luismendes070.tictactoegame.ui.LicensesScrollingActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
